# feedparser-data

./: README.md  setup.cfg  test.py
.github/workflows/: python-app.yml
feedparser_data/: __init__.py  core.py
