[metadata]
name = feedparser-data
description = "Get the data of your feeds"
author = FoxMaSk
author_email = foxmask@protonmail.com
url = https://github.com/foxmask/feedparser-data
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
keywords = httpx feedparser
version= attr: feedparser-data.__version__
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Topic :: Internet
	Topic :: Communications
	Topic :: Database

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    httpx
    feedparser

[options.packages.find]
exclude =
	tests

[flake8]
max-line-length = 120
exclude = .tox,build,.eggs
ignore = F401
